# discord-status-api

./: Dockerfile  compose.override.yml  compose.prd.yml  compose.yml
app/: main.py  pyproject.toml
app/routers/: discord_status_router.py
app/settings/: bot.py  config.py
